syntax = "proto3";
package proto;
option go_package = "shield/internal/proto";

service ShieldService {
    rpc CreateShield(CreateRequest) returns (CreateResponse);
    rpc ListShields(GetListRequest) returns (GetListResponse);
    rpc GetByName(GetByNameRequest) returns (Shield);
}

message Shield {
    int32 id = 1;
    string name = 2;
    int32 defense = 3;
}

message CreateRequest{
    string name = 1;
    int32 defense = 2;
}

message CreateResponse{
    Shield shield = 1;
}

message GetListRequest{}

message GetListResponse{
    repeated Shield shields = 1;
}

message GetByNameRequest{
    string name = 1;
}